[Orders] (API-145) Make 'shipmentDate' swagger param shared
